# cov-change

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  build.sh  coverage_parser.py  diff_parser.py  main.py  mypy.ini  pyproject.toml
.github/workflows/: lint.yml  publish.yml  tests.yml
cov_change/: check.py  cov_change_check.py  coverage_parser.py  diff_parser.py  main.py  output_writer.py  utils.py
diff_cov/: coverage_parser.py  diff_parser.py  main.py
tests/: .gitignore  README.md  cov1.json  cov2.json  cov_empty.json  diff.diff  test_harness.py
