[tool.poetry]
name = "cov-change"
version = "0.1.3"
description = "A tool to help you find the changes in your code that are not covered by your tests"
license = "MIT"
repository = "https://github.com/vsingh18567/cov-change"
homepage = "https://pypi.org/project/cov-change/"
authors = ["vsingh18567 <vsingh18567@gmail.com>"]
readme = "README.md"
packages = [
    { include = "cov_change" },
]

[tool.poetry.dependencies]
python = "^3.10"
rich = "^13.6.0"
dacite = "^1.8.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.5.1"
black = "^23.9.1"
pre-commit = "^3.4.0"

[tool.poetry.scripts]
cov-change = "cov_change.main:main"
cov-change-check = "cov_change.cov_change_check:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
